# GLADriver

./: .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  dev-driver-install.sh  dev-driver-uninstall.sh  dev-install.sh  dev-run-app.sh  run
.claude/: settings.local.json
app/: AppBackend.cpp  AppBackend.hpp  CMakeLists.txt  DaemonClient.cpp  DaemonClient.hpp  Main.cpp  MainComponent.cpp  MainComponent.hpp  avdecc_controller.cpp  avdecc_controller.hpp  gla_ipc_server.cpp  gla_ipc_server.hpp  usb_bridge_monitor.cpp  usb_bridge_monitor.hpp
app/src/: AVDECCController.h  AppBackend.h  GLAIPCServer.h  GLA_AVDECCController.h  GLA_AppBackend.h  GLA_IPCServer.h  GLA_Main.cpp  GLA_MainComponent.h  GLA_USBCapture.h  Main.cpp  MainComponent.h  USBBridgeMonitor.h
common/: CMakeLists.txt  GLAIPCTypes.h  GLARingBuffer.h  GLASocket.h  GLA_ChannelMatrix.h  GLA_CoreAudioUtils.h  GLA_IPCTypes.h  GLA_ResamplingFIFO.h  GLA_RingBuffer.h  GLA_Socket.h  gla_ipc_types.hpp  gla_ring_buffer.hpp  gla_socket.cpp  gla_socket.hpp
daemon/: CMakeLists.txt  avdecc_controller.cpp  avdecc_controller.hpp  gla_ipc_server.cpp  gla_ipc_server.hpp  main.cpp  usb_bridge_monitor.cpp  usb_bridge_monitor.hpp
daemon/plist/: com.greenlight.gla-daemon.plist
driver/: CMakeLists.txt  GLADriver.h  GLAIPCClient.h  GLAUSBReader.h  GLAUnifiedDevice.h  GLAUnifiedIOHandler.h  GLA_Driver.h  GLA_IPCClient.h  GLA_Log.h  GLA_USBReader.h  GLA_UnifiedDevice.h  GLA_entry_point.cpp  Info.plist.in  entry_point.cpp  gla_device.cpp  gla_device.hpp  gla_driver.cpp  gla_driver.hpp  gla_io_handler.cpp  gla_io_handler.hpp  gla_ipc_client.cpp  gla_ipc_client.hpp  gla_usb_reader.cpp  gla_usb_reader.hpp
installer/: install.sh  uninstall.sh
monitor_app/: CMakeLists.txt  main.cpp
scripts/: build-app.sh  build-driver.sh  build-monitor.sh  inject-test-map.py  inject-test-map.sh  install-driver.sh  recover-driver.sh  run-app.sh  run-monitor.sh  uninstall-driver.sh
tests/: CMakeLists.txt  GLA_test_ipc_protocol.cpp  GLA_test_ring_buffer.cpp  test_ipc_protocol.cpp  test_ring_buffer.cpp
